# slack-agent

./: Dockerfile  README-CORAL.md  README.md  SETUP.md  coral-agent.toml  deploy.py  env.coral.example  env.example  main.py  pyproject.toml  run_agent.sh  test_coral_integration.py  test_imports.py
jerry/: __init__.py  defaults.py  env.py
jerry/agent/: __init__.py  agent.py  utils.py
jerry/listeners/: __init__.py
jerry/listeners/actions/: __init__.py  auth_complete.py  user_settings.py
jerry/listeners/events/: __init__.py  assistant.py  home_opened.py
jerry/storage/: file.py  functions.py  schema.py
jerry/tools/: __init__.py  github_tool.py
slack_agent/: __init__.py  defaults.py  env.py  server.py
slack_agent/agent/: agent.py
slack_agent/server/: __init__.py  app.py
slack_agent/tools/: __init__.py  github_tool.py  google_tool.py  manager.py  search_tool.py  web_tool.py
